apps/haaska/home-assistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8123
---

apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
ports:
  - protocol: TCP
    port: 8123 
endpoints:
  - addresses:
      - 172.20.3.57
